--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.0.2",
-    "winston": "^2.4.0"
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
   },
   "devDependencies": {}
 }
